# LSSC

./: .gitignore  ligne_commande.txt  lssc.bat  lssc.cmd  main.cpp
Code/: INFOS.txt  LibLars.cpp  LibLars.h  TODO.txt  clustering.cpp  main.cpp  omp.cpp  secondary1.cpp  secondary2.cpp  somp.cpp  train.cpp  train2.cpp  train_modified.cpp
Code/ksvd_src/: Makefile  README.txt  addnoise_function.cpp  addnoise_function.h  ksvd.cpp  ksvd.h  lib_ormp.cpp  lib_ormp.h  lib_svd.cpp  lib_svd.h  main.cpp  utilities.cpp  utilities.h
LSSC_CMake/: CMakeLists.txt  LSSC.cbp  main.cpp
LSSC_CMake/FFTW/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
LSSC_CMake/Main/: CMakeLists.txt  main.cpp  params.h
LSSC_CMake/convert/: convert.cpp
LSSC_CMake/libIO/: CMakeLists.txt
LSSC_CMake/libImages/: CMakeLists.txt  LibImages.cpp  LibImages.h
LSSC_CMake/libLSSC/: CMakeLists.txt  ClassMatrix.h  LibLSSC.cpp  LibLSSC.h  LibMatrix.cpp  LibMatrix.h  utilities.cpp  utilities.h
LSSC_CMake/libMatrix/: CMakeLists.txt  ClassMatrix.cpp  ClassMatrix.h  LibMatrix.cpp  LibMatrix.h
LSSC_CMake/libORMP/: CMakeLists.txt  LibOrmp.cpp  LibOrmp.h
LSSC_Dictionaries/: dict_n12.mat  dict_n16.mat  dict_n9.mat  dict_n9.txt
LSSC_IPOL_article/: LSSC_IPOL.aux  LSSC_IPOL.blg  LSSC_IPOL.out  LSSC_IPOL.tex
Utilities/: LibImages.cpp  LibImages.h
