CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(LSSC)

IF(UNIX)
    SET(BUILD_SHARED_LIBS OFF CACHE BOOL "Dynamic libraries")
ENDIF(UNIX)

# Use the local libraries and do not check the system libraries
SET(WITH_LOCAL_ZLIB OFF CACHE BOOL "Use local zlib")
SET(WITH_LOCAL_LIBPNG OFF CACHE BOOL "Use local libpng")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(libIO)
ADD_SUBDIRECTORY(libORMP)
ADD_SUBDIRECTORY(libImages)
ADD_SUBDIRECTORY(libMatrix)
ADD_SUBDIRECTORY(libLSSC)

ADD_SUBDIRECTORY(3rdParty)

ADD_SUBDIRECTORY(Main)

INSTALL(FILES CMakeLists.txt DESTINATION src)
